--- a/locale/nl/LC_MESSAGES/django.po
+++ b/locale/nl/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-09 16:03+0100\n"
 "PO-Revision-Date: 2021-11-11\n"
-"Last-Translator: Open Risk <info@openrisk.eu>\n"
+"Last-Translator: Open Risk <info@openriskmanagement.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
